# phionyx-compliance

./: README.md  pyproject.toml
.github/workflows/: release.yml
docs/: DESIGN.md
src/phionyx_compliance/: __init__.py  chain_view.py  cli.py  mapping.py  renderer.py  templates.py
src/phionyx_compliance/templates/eu_ai_act_article_13/: README.md  disclaimer.md  mapping.yaml  schema.json  template.md
src/phionyx_compliance/templates/iso_iec_42001/: README.md  disclaimer.md  mapping.yaml  schema.json  template.md
src/phionyx_compliance/templates/nist_ai_rmf_1/: README.md  disclaimer.md  mapping.yaml  schema.json  template.md
src/phionyx_compliance/templates/owasp_agentic_ai_v1/: README.md  disclaimer.md  mapping.yaml  schema.json  template.md
tests/: test_all_templates.py  test_chain_view.py  test_f4_f8_acceptance.py  test_mapping.py  test_renderer.py  test_scaffold.py  test_templates.py
